<resources>
    <string name="app_name">LabApp</string>
    <string name="reading_from_accelorometre">Reading from Accelorometre</string>
    <string name="data_from_acceloreometre">Data From acceloreometre</string>
    <string name="reading_from_light_snesor">Reading From Light Snesor</string>
    <string name="data_from_light_senesor">Data from Light senesor</string>
    <string name="data_from_baro">data from baro</string>
    <string name="reading_from_magnetometers">Reading from Magnetometers</string>
    <string name="reading_from_gyro">Reading from Gyro</string>
    <string name="reading_from_hall_effect">Reading from Hall effect</string>
    <string name="reading_from_barometer">Reading from barometer</string>
    <string name="start_recoding">Start Recoding</string>
    <string name="reading_from_proximity_sensor">Reading from proximity Sensor</string>
    <string name="data_from_prox">Data from prox</string>
    <string name="atltitude_reading">Atltitude reading</string>
    <string name="next_phase">NEXT PHASE !</string>
    <string name="data_succesfuly_recorded">Data Succesfuly Recorded !</string>
    <string name="go_back_to_main_screen">Go back to main screen</string>
    <string name="title_activity_detect_position">DetectPosition</string>
    <string name="please_click_on_the_button_to_detect_your_position">Please Click on the button to detect your Position !</string>
    <string name="a" />
</resources>
