<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mk.labapp.SensorReader">

    <TextView
        android:id="@+id/ReadingFromAcce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reading_from_accelorometre"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/DataFromAcce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/data_from_acceloreometre"
        android:textColor="#000000"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/ReadingFromlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reading_from_light_snesor"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/DataFromLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/data_from_light_senesor"
        android:textColor="#000000"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/ReadingFromBaro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reading_from_barometer"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/DataFromBaro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/data_from_baro"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Altitudereading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atltitude_reading"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/DataFromAlti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/data_from_baro"
        android:textColor="#000000"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/ReadingFromMagne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reading_from_magnetometers"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/DataFromMagne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/data_from_baro"
        android:textColor="#000000"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/ReadingFromProx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reading_from_proximity_sensor"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/DataFromprox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/data_from_prox"
        android:textColor="#000000"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button

            android:id="@+id/Calibration"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="Calibrate" />
        <Button
            android:id="@+id/button"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="Detect Position" />

    </LinearLayout>

    <TextView
        android:text="TextView"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CenterEarText" />

    <TextView
        android:text="TextView"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CenterHandText" />

    <TextView
        android:text="TextView"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CenterPocketText" />

    <TextView
        android:text="TextView"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CenterBackPocketText" />
</LinearLayout>
